--- a/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
+++ b/app/ui/dashboard/sidebar/menuLink/menuLink.module.css
@@ -1,6 +1,15 @@
-.container{
+.container {
     padding: 20px;
     display: flex;
     align-items: center;
-    gap: 10px
+    gap: 10px;
+    margin: 5px 0px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.container:hover,
+.active {
+    background-color: #2e374a;
+
 }
