--- a/app/ui/dashboard/sidebar/sidebar.module.css
+++ b/app/ui/dashboard/sidebar/sidebar.module.css
@@ -41,3 +41,21 @@
     font-size: 13px;
     margin: 10px 0px;
 }
+
+.logout {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 5px 0px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    background: none;
+    color: white;
+    width: 100%;
+}
+
+.logout:hover {
+    background-color: #2e374a;
+}
