--- a/app/ui/dashboard/chart/chart.module.css
+++ b/app/ui/dashboard/chart/chart.module.css
@@ -1,3 +1,12 @@
 .container {
-    
+    height: 450px;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: var(--bgSoft);
+}
+
+.title {
+    margin-bottom: 20px;
+    font-weight: 200;
+    color: var(--textSoft);
 }
