--- a/app/ui/dashboard/navbar/navbar.module.css
+++ b/app/ui/dashboard/navbar/navbar.module.css
@@ -31,7 +31,8 @@
 .input {
     background-color: transparent;
     border: none;
-    color: var(--text)
+    color: var(--text);
+    outline: none;
 }
 
 .icons {
